@@ -1,3 +1,9 @@
+2010-07-10 01:20-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Modules/Editors/ProjectCenter/PCEditor.m: in -save implemented 
+	simple mechanism for propagating changes in classes to Gorm when 
+	updating a header file.
+
 2010-07-08 Riccardo Mottola
 
 	* Framework/PCProject.m
